tests/sources/invalid/generics/generic_def_syntax_errors.fire
// Malformed generic function definitions.

// Missing type parameter name after '<'
fn badParam<(x: T) -> T {  //~ ERROR FS-PARSE-0010 @13
//~^ ERROR FS-PARSE-0010 @17
//~^^ ERROR FS-PARSE-0010 @23
    return x;  //~ ERROR FS-PARSE-0003 @12
}

// Missing constraint after ':'
fn badConstraint<T:>(x: T) -> T {  //~ ERROR FS-PARSE-0010 @20
//~^ ERROR FS-PARSE-0010 @25
//~^^ ERROR FS-PARSE-0010 @31
    return x;  //~ ERROR FS-PARSE-0003 @12
}

// Missing '>' to close type parameters
fn unclosed<T(x: T) -> T {  //~ ERROR FS-PARSE-0010 @14
//~^ ERROR FS-PARSE-0010 @18
//~^^ ERROR FS-PARSE-0010 @24
    return x;  //~ ERROR FS-PARSE-0003 @12
}

// Return type is not a declared type parameter
fn badReturn<T>(x: T) -> Q {  //~ ERROR FS-PARSE-0010 @26
//~^ ERROR FS-PARSE-0010 @26
    return x;  //~ ERROR FS-PARSE-0003 @12
}
